# metal-rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  renovate.json
.github/workflows/: ci.yml  rust.yml
examples/argument-buffer/: main.rs
examples/bind/: main.rs
examples/bindless/: main.rs
examples/caps/: main.rs
examples/circle/: main.rs
examples/compute/: compute-argument-buffer.rs  embedded-lib.rs  main.rs
examples/counters/: main.rs
examples/error-sigsegv/: main.rs
examples/events/: main.rs
examples/fence/: main.rs
examples/headless-render/: main.rs
examples/indirect/: main.rs
examples/io-command-queue/: content.txt  main.rs
examples/mesh-shader/: main.rs
examples/mps/: main.rs
examples/mps-matrix/: main.rs
examples/mps/custom-kernels/: main.rs
examples/mps/matrix-multiplication/: main.rs
examples/mps/ray-intersection/: main.rs
examples/raytracing/: camera.rs  geometry.rs  main.rs  renderer.rs  scene.rs
examples/reflection/: main.rs
examples/shader-dylib/: main.rs
examples/texture/: .gitignore  Cargo.toml  README.md  build.rs  shaders.metal
examples/texture/shader_types/: shader_types.h  wrapper.h
examples/texture/src/: main.rs  shader_bindings.rs
examples/window/: default.metallib  main.rs  shaders.metal  shaders.metallib
guide/: README.md
guide/debugging-in-xcode/: README.md
guide/internals/: README.md
src/: acceleration_structure.rs  acceleration_structure_pass.rs  accelerator_structure.rs  argument.rs  blitpass.rs  buffer.rs  capturedescriptor.rs  capturemanager.rs  color_space.rs  commandbuffer.rs  commandqueue.rs  computepass.rs  constants.rs  counters.rs  depthstencil.rs  device.rs  drawable.rs  encoder.rs  heap.rs  indirect_encoder.rs  iocommandbuffer.rs  iocommandqueue.rs  iofilehandle.rs  lib.rs  library.rs  mps.rs  pipeline.rs  renderpass.rs  resource.rs  sampler.rs  sync.rs  texture.rs  types.rs  vertexdescriptor.rs
src/mps/: matrix.rs  mod.rs  raytracing.rs
src/pipeline/: compute.rs  compute_pipeline.rs  mod.rs  render.rs  render_pipeline.rs
