[package]
name = "metal"
version = "0.18.0"
description = "Rust bindings for Metal"
documentation = "https://docs.rs/crate/metal"
homepage = "https://github.com/gfx-rs/metal-rs"
repository = "https://github.com/gfx-rs/metal-rs"
authors = ["GFX Developers"]
readme = "README.md"
keywords = ["metal", "graphics", "bindings"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[features]
default = []
private = []

[dependencies]
cocoa = "0.20"
core-graphics = "0.19"
bitflags = "1"
log = "0.4"
block = "0.1.5"
foreign-types = "0.3"

[dependencies.objc]
version = "0.2.4"
features = ["objc_exception"]

[dev-dependencies]
winit = "0.22"
sema = "0.1.4"
png = "0.16"

[[example]]
name = "window"

[[example]]
name = "headless-render"

[[example]]
name = "library"

[[example]]
name = "reflection"

[[example]]
name = "caps"

[[example]]
name = "argument-buffer"

[[example]]
name = "compute"
path = "examples/compute/main.rs"

[[example]]
name = "embedded-lib"
path = "examples/compute/embedded-lib.rs"

[[example]]
name = "compute-argument-buffer"
path = "examples/compute/compute-argument-buffer.rs"

[[example]]
name = "bind"
