[package]
name = "metal"
version = "0.26.0"
description = "Rust bindings for Metal"
documentation = "https://docs.rs/crate/metal"
homepage = "https://github.com/gfx-rs/metal-rs"
repository = "https://github.com/gfx-rs/metal-rs"
authors = ["gfx-rs developers"]
readme = "README.md"
keywords = ["metal", "graphics", "bindings"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = ["guide/**/*", "examples/texture/**/*", "tests/**/*", "Cargo.lock", "target/**/*"]

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[features]
default = ["link"]
private = []
mps = []
link = []

[dependencies]
# Branch: objc2. TODO: Remove this
core-graphics-types = { git = "https://github.com/madsmtm/core-foundation-rs.git", rev = "7d593d016175755e492a92ef89edca68ac3bd5cd" }
bitflags = "2"
log = "0.4"
block2 = "=0.2.0-alpha.6"
foreign-types = "0.5"
dispatch = { version = "0.2", optional = true }
paste = "1"
objc2 = "=0.3.0-beta.2"

[dev-dependencies]
cocoa = "0.24.0"
cty = "0.2.1"
winit = "0.27"
sema = "0.1.4"
png = "0.17"
glam = "0.22"
rand = "0.8"

[[example]]
name = "window"

[[example]]
name = "headless-render"

[[example]]
name = "library"

[[example]]
name = "raytracing"

[[example]]
name = "reflection"

[[example]]
name = "caps"

[[example]]
name = "argument-buffer"

[[example]]
name = "bindless"

[[example]]
name = "circle"
path = "examples/circle/main.rs"

[[example]]
name = "compute"
path = "examples/compute/main.rs"

[[example]]
name = "mps"
required-features = ["mps"]

[[example]]
name = "embedded-lib"
path = "examples/compute/embedded-lib.rs"

[[example]]
name = "compute-argument-buffer"
path = "examples/compute/compute-argument-buffer.rs"

[[example]]
name = "bind"

[[example]]
name = "events"
required-features = ["dispatch"]

[[example]]
name = "fence"

[workspace]
members = [
  "examples/texture",
]
