[package]
name = "texture"
authors = ["Chinedu Francis Nwafili"]
version = "0.0.1"
publish = false
edition = "2018"

[build-dependencies]
bindgen = { version = "0.60", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }

[dependencies]
cocoa = "0.24"
png = "0.17"
metal = { path = "../../" }
winit = "0.27"
objc2 = "=0.3.0-beta.5"

[dependencies.icrate]
version = "0.0.2"
features = ["Foundation"]
