[package]
name = "texture"
authors = ["Chinedu Francis Nwafili"]
version = "0.0.1"
publish = false
edition = "2018"

[build-dependencies]
bindgen = { version = "0.60", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }

[dependencies]
# Branch: objc2. TODO: Remove this
core-graphics-types = { git = "https://github.com/madsmtm/core-foundation-rs.git", rev = "7d593d016175755e492a92ef89edca68ac3bd5cd" }
cocoa = "0.24"
png = "0.17"
metal = { path = "../../" }
winit = "0.27"
objc2 = "=0.3.0-beta.2"
