[package]
name = "texture"
authors = ["Chinedu Francis Nwafili"]
version = "0.0.1"
publish = false
edition = "2018"

[build-dependencies]
bindgen = { version = "0.60", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }

[dependencies]
core-graphics-types = "0.1"
cocoa = "0.25"
core-graphics = "0.22"
png = "0.17"
metal = { path = "../../" }
winit = "0.29"

[dependencies.objc]
version = "0.2.4"
features = ["objc_exception"]
